<resources>
    <string name="app_name">Driveway Parking</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="email_id">Email</string>
    <string name="input_pass">Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="button_signUp">Sign Up</string>
    <string name="login_question">Already have an account? Login here!</string>
    <string name="driveway_parking">Driveway Parking</string>
    <string name="login_text">Login</string>
    <string name="emailUsername">Email</string>
    <string name="pass_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="signup_question">Do not have an account? Signup here!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="driveway"><u>Driveway</u></string>
    <string name="password">Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name_user">Name</string>
    <string name="back_to_main">back to main</string>
    <string name="out_of_five_stars_how_would_you_rate_your_experience">Out of five stars, how would you rate your experience?</string>
    <string name="share_your_experience">Share your experience.</string>
    <string name="talk_about_your_experience_on_renting_this_space_any_suggestions_for_improvement">Talk about your experience on renting this space. Any suggestions for improvement?</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_your_account_will_be_deleted_permanently">Are you sure? Your account will be deleted permanently</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="update">Update</string>
    <string name="change_email">Change Email</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_email">New Email</string>
    <string name="create_new_listing">Create New Listing</string>
    <string name="listing_name">Listing Name</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="from">From</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="from_time">From</string>
    <string name="starting_time">Starting Time</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="to_time">To</string>
    <string name="ending_time">Ending Time</string>
    <string name="pm_extract">PM</string>
    <string name="am_extract">AM</string>
    <string name="select_parking_spot">Select Parking Spot</string>
    <string name="create_listing">Create Listing</string>
    <string name="create_new_booking">Create New Booking</string>
    <string name="view_all_properties">View All Properties</string>
    <string name="create_booking">Create Booking</string>
    <string name="create_new_property">Create new Property</string>
    <string name="action_done">First Name Last Name</string>
    <string name="report">Report</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="my_profile">My Profile</string>
    <string name="rent_your_space">Rent Your Space</string>
    <string name="contact_number">Contact Number:</string>
    <string name="postal_code">Postal Code</string>
    <string name="hourlyRate">Hourly Rate</string>
    <string name="createNewProperty">Create New Property</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inbox">Inbox</string>
    <string name="reserved">Reserved</string>
    <string name="view_all_bookings">View All Bookings</string>
    <string name="view_ratings">View Ratings</string>
    <string name="xxx">XXX</string>
    <string name="are_you_sure_you_want_to_book_this_property">Are you sure you want to book this property?</string>
    <string name="title_activity_view_property">ViewPropertyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>