...
            android:text="Driveway Parking"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="472dp"
            android:gravity="center"
            android:padding="10dp">


            <EditText
                android:id="@+id/property_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:fontFamily="serif"
...
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/street_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:fontFamily="serif"
...
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/state_name"
                android:layout_width="130dp"
                android:layout_height="44dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/rounded_edit_text"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/country_name"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="198dp"
                android:background="@drawable/rounded_edit_text"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/city_name"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:layout_marginTop="108dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:fontFamily="serif"
...
                app:layout_constraintHorizontal_bias="0.233"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/hourlyrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="236dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
...
