<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MessageRoomActivity">


    <EditText
        android:id="@+id/editText_receiver_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_design"
        android:hint="Enter receiver email address"
        android:padding="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_receiver_email"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="Enter room"
        android:textColor="#ffffff"
        android:background="@color/black"
        android:id="@+id/enterBtn"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dispute_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="532dp"
        android:layout_alignTop="@+id/enterBtn"
        android:layout_marginTop="59dp"
        android:background="@color/white" />

</RelativeLayout>